frontend/test/should_pass/getEquivalentOrAdd.grg
rule r(ref a:array<graph>)
{
	modify {
	---
		def var g:graph;
		eval {
			(yield g) = getEquivalentOrAdd(this, a);
		}
		
		exec({(g) = getEquivalentOrAdd(g, a)});
	}
}
