frontend/test/should_fail/exectype_AssignSetCreationToVar.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<H> =set<HH>);
	}
}